Inicio da configuração do swagger
